 syntax = "proto3";

package rs;


 message RouteWriteRequest {
   float seismic_activity = 1;
   float temperature_c = 2;
   float radiation_level = 3;
   string id = 4;
   string location_id = 5;
}


 message RouteWriteResponse {}

message WriteShardRequest {
   string location_id = 1;
   bytes shard = 2;
}

message WriteShardResponse {}


 service Rs {
   rpc routeWrite(RouteWriteRequest) returns (RouteWriteResponse){}
   rpc writeShardRequest(WriteShardRequest) returns (WriteShardResponse){}
 }